<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/favorite"-->
<!--        android:icon="@drawable/ic_favorite_24dp"-->
<!--        android:title="@string/favorite"-->
<!--        android:contentDescription="@string/content_description_favorite"-->
<!--        app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/addTodo"
        android:icon="@drawable/ic_add_box_24dp"
        android:title="@string/addTodo"
        android:contentDescription="@string/content_description_addTodo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="never" />

</menu>